--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="container">
         <div id="page1" class="content active">
             <h1>📸 Choisis Tes Photos Préférées</h1>
-            <p>Ici, c'est toi qui choisis ! Dis-moi quelles photos tu veux : pose, style, ambiance... et je te les envoie en exclusivité. 💖</p>
+            <p>Je propose une sélection unique de mes plus belles photos. Sélectionne celles que tu veux et reçois-les en exclusivité ! 💖</p>
             <div class="nav-buttons">
                 <a href="#" onclick="nextPage(event)">Suivant →</a>
             </div>
@@ -123,8 +123,10 @@
 
         <div id="page4" class="content">
             <h2>💖 Commande Tes Photos</h2>
-            <p>Chaque photo est au prix de <strong>20€</strong>. Procède au paiement pour recevoir tes photos !</p>
-            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=emily.lesuree@gmail.com&amount=20.00&currency_code=EUR" class="btn">💳 Payer avec PayPal</a>
+            <p>Chaque photo est au prix de <strong>20€</strong>. Utilise le bouton ci-dessous pour payer :</p>
+            
+            <a href="https://paypal.me/EmilyLesure?country.x=FR&locale.x=fr_FR" class="btn" target="_blank">💳 Payer avec PayPal</a>
+            
             <div class="nav-buttons">
                 <a href="#" onclick="prevPage(event)">← Précédent</a>
             </div>
