--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
         footer {
             background-color: #000;
             text-align: center;
-            padding: 15px;
+            padding: 5px; /* Réduit l'espace en bas */
             position: fixed;
             bottom: 0;
             width: 100%;
+            font-size: 14px; /* Réduit la taille du texte */
         }
 
         /* Galerie avec des images défilant de gauche à droite */
@@ -166,7 +167,8 @@
             }
 
             footer {
-                padding: 10px;
+                padding: 5px 0; /* Réduction de l'espace dans le footer */
+                font-size: 14px; /* Texte plus petit */
             }
 
             /* Remontée de la section 'Acheter' */
