--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            transition: filter 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
         header {
@@ -30,16 +32,17 @@
         section {
             padding: 20px;
             text-align: center;
+            flex-grow: 1; /* Permet de pousser le footer en bas */
         }
 
         .cta {
             margin-top: 20px;
-            padding: 15px 25px;
+            padding: 20px 30px;
             background-color: #ff69b4;
             color: #fff;
             border: none;
             cursor: pointer;
-            font-size: 22px;
+            font-size: 24px;
             border-radius: 5px;
             transition: all 0.3s ease;
         }
@@ -47,16 +50,6 @@
         .cta:hover {
             background-color: #c2185b;
             transform: scale(1.1);
-        }
-
-        footer {
-            background-color: #000;
-            text-align: center;
-            padding: 5px; /* Réduit l'espace en bas */
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            font-size: 14px; /* Réduit la taille du texte */
         }
 
         /* Galerie avec des images défilant de gauche à droite */
@@ -127,7 +120,7 @@
 
         /* Section de prix et bouton d'achat */
         .price-info {
-            margin-top: 20px;
+            margin-top: 10px;
             font-size: 18px;
             color: #ff69b4;
         }
@@ -143,9 +136,9 @@
             }
 
             .cta {
-                font-size: 18px;
-                padding: 12px 20px;
-                margin-top: 15px; /* Remontée du bouton sur mobile */
+                font-size: 20px;
+                padding: 18px 25px;
+                margin-top: 20px;
             }
 
             .scroll-gallery-wrapper {
@@ -167,11 +160,13 @@
             }
 
             footer {
-                padding: 5px 0; /* Réduction de l'espace dans le footer */
-                font-size: 14px; /* Texte plus petit */
+                font-size: 14px;
+                text-align: center;
+                margin-top: auto;
+                padding: 5px 0;
+                margin-left: 20px; /* Décale légèrement les crédits vers la droite */
             }
 
-            /* Remontée de la section 'Acheter' */
             .price-info {
                 font-size: 16px;
                 margin-bottom: 15px;
@@ -209,17 +204,14 @@
                 </div>
             </div>
         </div>
-    </section>
 
-    <section>
-        <h2>Acheter des Photos Exclusives</h2>
+        <!-- Le bouton "Acheter" sous la galerie -->
         <p>Chaque photo est disponible pour seulement <strong>10€</strong>. Sélectionne celles que tu préfères et passe ta commande en toute simplicité !</p>
         <p class="price-info">Fais-nous part de tes demandes spécifiques pour personnaliser ton achat !</p>
-
-        <!-- Le bouton redirige maintenant vers PayPal -->
         <button class="cta" onclick="window.location.href='https://paypal.me/EmilyLesure?country.x=FR&locale.x=fr_FR'">Acheter</button>
     </section>
 
+    <!-- Crédits décalés légèrement à droite -->
     <footer>
         <p>&copy; 2025 Emily. Tous droits réservés.</p>
     </footer>
