--- a/index.html
+++ b/index.html
@@ -86,43 +86,27 @@
             }
         }
 
-        /* Modal pour les photos */
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.5s ease-in-out, visibility 0.5s;
-        }
-
-        .modal.active {
-            opacity: 1;
-            visibility: visible;
-        }
-
-        .modal-content {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 15px;
-            width: 80%;
-            max-width: 600px;
-            overflow-y: auto;
-            text-align: center;
-        }
-
         /* Section de prix et bouton d'achat */
         .price-info {
-            margin-top: 10px;
+            margin-top: 20px;
             font-size: 18px;
             color: #ff69b4;
+        }
+
+        /* Footer avec crédits au centre de la page */
+        footer {
+            background-color: #1a1a1a;
+            text-align: center;
+            padding: 15px;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+        }
+
+        footer p {
+            margin: 0;
+            padding: 0;
+            color: #fff;
         }
 
         /* Optimisation pour mobile */
@@ -136,9 +120,8 @@
             }
 
             .cta {
-                font-size: 20px;
-                padding: 18px 25px;
-                margin-top: 20px;
+                font-size: 18px;
+                padding: 12px 20px;
             }
 
             .scroll-gallery-wrapper {
@@ -157,19 +140,6 @@
                 width: 250px; /* Taille des images pour mobile */
                 margin: 0 5px;
                 filter: blur(4px);
-            }
-
-            footer {
-                font-size: 14px;
-                text-align: center;
-                margin-top: auto;
-                padding: 5px 0;
-                margin-left: 20px; /* Décale légèrement les crédits vers la droite */
-            }
-
-            .price-info {
-                font-size: 16px;
-                margin-bottom: 15px;
             }
         }
     </style>
@@ -204,30 +174,19 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <!-- Le bouton "Acheter" sous la galerie -->
+    <section>
+        <h2>Acheter des Photos Exclusives</h2>
         <p>Chaque photo est disponible pour seulement <strong>10€</strong>. Sélectionne celles que tu préfères et passe ta commande en toute simplicité !</p>
         <p class="price-info">Fais-nous part de tes demandes spécifiques pour personnaliser ton achat !</p>
+
+        <!-- Le bouton redirige maintenant vers PayPal -->
         <button class="cta" onclick="window.location.href='https://paypal.me/EmilyLesure?country.x=FR&locale.x=fr_FR'">Acheter</button>
     </section>
 
-    <!-- Crédits décalés légèrement à droite -->
     <footer>
-        <p>&copy; 2025 Emily. Tous droits réservés.</p>
+        <p>© 2025 Emily. Tous droits réservés.</p>
     </footer>
-
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close-modal" onclick="closeModal()">&times;</span>
-            <h1>📸 Choisis Tes Photos Préférées</h1>
-            <p>Je propose une sélection unique de mes plus belles photos. Sélectionne celles que tu veux et reçois-les en exclusivité ! 💖</p>
-        </div>
-    </div>
-
-    <script>
-        function closeModal() {
-            document.getElementById("modal").classList.remove("active");
-        }
-    </script>
 </body>
 </html>
