--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
+            transition: filter 0.3s ease;
         }
 
         header {
@@ -32,17 +30,16 @@
         section {
             padding: 20px;
             text-align: center;
-            flex-grow: 1; /* Permet de pousser le footer en bas */
         }
 
         .cta {
-            margin-top: 20px;
-            padding: 20px 30px;
+            margin-top: 30px;
+            padding: 15px 25px;
             background-color: #ff69b4;
             color: #fff;
             border: none;
             cursor: pointer;
-            font-size: 24px;
+            font-size: 22px;
             border-radius: 5px;
             transition: all 0.3s ease;
         }
@@ -50,6 +47,21 @@
         .cta:hover {
             background-color: #c2185b;
             transform: scale(1.1);
+        }
+
+        footer {
+            background-color: #000;
+            text-align: center;
+            padding: 15px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        footer p {
+            margin: 0;
+            padding: 0;
+            color: #fff;
         }
 
         /* Galerie avec des images défilant de gauche à droite */
@@ -93,22 +105,6 @@
             color: #ff69b4;
         }
 
-        /* Footer avec crédits au centre de la page */
-        footer {
-            background-color: #1a1a1a;
-            text-align: center;
-            padding: 15px;
-            width: 100%;
-            position: absolute;
-            bottom: 0;
-        }
-
-        footer p {
-            margin: 0;
-            padding: 0;
-            color: #fff;
-        }
-
         /* Optimisation pour mobile */
         @media (max-width: 768px) {
             header {
@@ -140,6 +136,10 @@
                 width: 250px; /* Taille des images pour mobile */
                 margin: 0 5px;
                 filter: blur(4px);
+            }
+
+            footer {
+                padding: 10px;
             }
         }
     </style>
@@ -186,7 +186,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Emily. Tous droits réservés.</p>
+        <p style="text-align:center; margin-left: 10px;">© 2025 Emily. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
