--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         header {
             background-color: #000;
-            padding: 20px;
+            padding: 15px;
             text-align: center;
         }
 
@@ -28,7 +28,7 @@
         }
 
         section {
-            padding: 20px;
+            padding: 5px 20px;
             text-align: center;
         }
 
@@ -52,7 +52,7 @@
         footer {
             background-color: #000;
             text-align: center;
-            padding: 15px;
+            padding: 10px;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -150,7 +150,7 @@
         <p>Découvrez des photos exclusives et personnelles.</p>
     </header>
     
-    <section>
+    <section style="margin-top: -20px;">
         <h2>Galerie Exclusive</h2>
         <div class="scroll-container">
             <div class="scroll-gallery-wrapper">
@@ -176,7 +176,7 @@
         </div>
     </section>
 
-    <section>
+    <section style="margin-top: -20px;">
         <h2>Acheter des Photos Exclusives</h2>
         <p>Chaque photo est disponible pour seulement <strong>10€</strong>. Sélectionne celles que tu préfères et passe ta commande en toute simplicité !</p>
         <p class="price-info">Fais-nous part de tes demandes spécifiques pour personnaliser ton achat !</p>
