--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            margin-top: 30px; /* Ajoute un petit espace au-dessus des crédits */
+            margin-top: 50px; /* Ajoute un plus grand espace au-dessus des crédits */
         }
 
         footer p {
