--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
 
         section {
-            padding: 50px 20px;
+            padding: 20px;
             text-align: center;
             min-height: 300px; /* Hauteur minimale pour que la page soit plus longue */
         }
@@ -58,7 +58,6 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            margin-top: 50px; /* Ajoute un plus grand espace au-dessus des crédits */
         }
 
         footer p {
